changed sidebar links hover background color and fixed link alignment

--- a/src/components/designUtils/_colors.scss
+++ b/src/components/designUtils/_colors.scss
@@ -9,3 +9,4 @@ $icon-color: #FFFFFF;
 $button-color: #BE831D;
 $text-color: #000000;
 $background-dim: rgba(0,0,0,0.25);
+$hover-background-color: rgba(231,238,239,0.9);
