--- a/src/components/sideBar/SideBar.scss
+++ b/src/components/sideBar/SideBar.scss
@@ -53,7 +53,6 @@
         display: flex;
         justify-content: start;
         align-items: center;
-        padding: 8px 0px 8px 16px;
         color: $text-color;
         list-style: none;
         height: 60px;
@@ -63,18 +62,18 @@
         text-decoration: none;
         color: $text-color;
         font-size: 18px;
-        width: 95%;
+        width: 100%;
         height: 100%;
         display: flex; 
         justify-content: left;
         align-items: center;
-        padding: 0 16px;
         border-radius: 4px;
-        border-bottom: 1px solid #dadada
+        border-bottom: 1px solid #dadada;
+        padding-left: 10px;
     }
     
     &__text a:hover {
-        background-color: $background-green;
+        background-color:$hover-background-color;
     }
     
     &__items {
@@ -82,7 +81,7 @@
     }
     
     &__header {
-        background-color: $icon-color;
+        box-shadow: inset ;
         width: 100%;
         height: 40px;
         display: flex;
@@ -101,4 +100,6 @@
     left: 0;
     transition: 350ms;
 }
+
+
 
